@@ -229,6 +229,10 @@ grub_fill_multiboot_mmap (struct multiboot_mmap_entry *first_entry)
 	case GRUB_MEMORY_NVS:
  	  mmap_entry->type = MULTIBOOT_MEMORY_NVS;
  	  break;
+
+	case GRUB_MEMORY_BADRAM:
+ 	  mmap_entry->type = MULTIBOOT_MEMORY_BADRAM;
+ 	  break;
 	  
  	default:
  	  mmap_entry->type = MULTIBOOT_MEMORY_RESERVED;
